--- a/SimpleUwpCalculator/MainPage.xaml
+++ b/SimpleUwpCalculator/MainPage.xaml
@@ -40,14 +40,13 @@
             <Setter Property="Margin" Value="2"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
-            
         </Style>
     </Page.Resources>
 
     <Grid Background="{ThemeResource SystemControlAcrylicWindowBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="32"/>
+            <RowDefinition Height="150"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -61,10 +60,11 @@
                        TextWrapping="Wrap"
                        Text="{Binding DisplayText}"/>
         </ScrollViewer>
-        
+
         <!-- Memory Panel-->
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -86,6 +86,11 @@
             <Button Grid.Column="4" x:Name="ButtonMS" Content="MS" 
                     Style="{StaticResource MemoryButtonStyle}"
                     Click="ButtonMS_Click"/>
+            <Button Grid.Column="5" x:Name="ButtonMore"
+                    Style="{StaticResource MemoryButtonStyle}"
+                    Click="ButtonMore_Click">
+                <SymbolIcon Symbol="More"/>
+            </Button>
         </Grid>
 
         <!-- Button Panel-->
@@ -191,5 +196,5 @@
 
         </Grid>
     </Grid>
-    
+
 </Page>
